# hass-miyoo

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Claude.md  DEBUGGING_MIYOO.md  LICENSE  README.md  servers.example.json
.github/workflows/: build.yml  moonlight-clone.yml  release.yml
cmake/: arm-toolchain.cmake
docs/: development-setup.md
issues/: README.md  black-screen-crash-at-boot.md  no-sound.md
libs/miyoo/: README.md
src/: audio.c  audio.h  cache_manager.c  cache_manager.h  database.c  database.h  ha_client.c  ha_client.h  main.c  test_display.c
src/screens/: screen_automation.c  screen_automation.h  screen_device.c  screen_device.h  screen_info.c  screen_info.h  screen_list.c  screen_list.h  screen_scene.c  screen_scene.h  screen_script.c  screen_script.h  screen_setup.c  screen_setup.h  screen_test.c  screen_test.h
src/ui/: colors.h  components.c  components.h  fonts.c  fonts.h  icons.c  icons.h
src/utils/: config.c  config.h  input.c  input.h  json_helpers.c  json_helpers.h
tests/: test_api  test_api_client.c
tools/: generate_icon  generate_icon.c
